<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">卡车团</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="application_name">卡车团</string>
    <string name="activity_user_login_title">会员登陆</string>
    <string name="activity_user_login_inptut_username">用户</string>
    <string name="activity_user_login_inptut_username_hint">请输入手机号</string>
    <string name="activity_user_login_inptut_password">密码</string>
    <string name="activity_user_login_inptut_password_hint">请输入密码</string>
    <string name="activity_user_login_inptut_submit">登录</string>
    <string name="activity_user_login_inptut_regedit">注册</string>
    <string name="activity_user_register_top_title">会员注册</string>
    <string name="activity_user_register_name">请输入用户名，建议使用手机号或者邮箱</string>
    <string name="activity_user_register_password">6－12位字符(特殊字符除外)，区分大小写</string>
    <string name="activity_user_register_psw_again">请再次输入密码</string>
    <string name="activity_user_register_email">邮箱</string>
    <string name="activity_user_register_phone">手机或随车电话</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开后刷新</string>
    <string name="header_hint_refresh_loading">正在加载中</string>
    <string name="header_hint_refresh_time">上次更新：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开加载</string>
    <string name="footer_hint_load_all">已加载</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- 购物车 -->
    <string name="shoopping_cart">购物车</string>
    <string name="cart_all_sum">总计&#058;</string>
    <string name="cart_product_sum">商品金额&#058;</string>
    <string name="cart_price">单价&#160;&#165;</string>
    <string name="cart_item_sum">金额&#160;&#165;</string>
    <string name="cart_item_count">数量&#058;</string>
    <string name="cart_item_number">类型&#058;</string>
    <string name="cart_del_selected">删除选择商品</string>
    <string name="cart_count">X</string>
    <string name="cart_edit_count">修改购买数量</string>
    <string name="cart_edit_ok">确定</string>
    <string name="cart_edit_cancel">取消</string>

    <!-- 维修救援 -->
    <string name="service_recompany">救援公司</string>
    <string name="service_4s">4S店</string>
    <string name="service_garage">维修站</string>
    <!-- 银行支付 -->
    <string name="recharge_money_amount">充值金额</string>
    <string name="myuser_createcred_bind_bank_hint">请选择银行</string>
    <string name="myuser_createcred_cardnum">卡号</string>
    <string name="choose_bank">选择银行</string>
    <string name="bank_tip">银行卡、开户信息</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="bank_card_num_2">请输入卡号</string>
    <string name="people_name">姓名</string>
    <string name="people_name_2">请输入姓名</string>
    <string name="people_id_num">身份证号</string>
    <string name="bank_card_phonenum">银行预留手机号</string>
    <string name="fast_payment_protocol">《快捷支付协议》</string>
    <string name="please_input_cardnum">请输入银行卡号</string>
    <string name="please_input_cardname">请输入姓名</string>
    <string name="please_input_cardidentity">请输入身份证号</string>
    <string name="please_input_right_cardidentity">请输入正确的身份证号</string>
    <string name="please_input_cardmobile">请输入银行预留手机号</string>
    <string name="please_input_phonemobile">请输入该卡片的预留手机号</string>
    <string name="please_input_verifycode">请输入验证码</string>
    <string name="myuser_edit_info">个人信息</string>
    <string name="myuser_edit_info_name">姓名</string>
    <string name="myuser_edit_info_save">保存</string>
    <string name="myuser_edit_info_name_hint">请输入真实姓名</string>
    <string name="identification">身份证</string>
    <string name="identification_hint">身份证</string>
    <string name="myuserhome_phone">手机号</string>
    <string name="myuser_bank_phone_num_hint">请输入银行预留手机号</string>
    <string name="get_authcode">获取验证码</string>
    <string name="re_get_authcode">重新获取</string>
    <string name="myuser_verifycode">验证码</string>
    <string name="input_verifycode_hint">请输入验证码</string>
    <string name="myuser_i_have_readed">我已阅读并同意</string>

</resources>