<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/topview"
        layout="@layout/base_top_title" />

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topview" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topview"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:visibility="gone"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/service_garage"
                android:src="@drawable/service_garage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:gravity="center_horizontal"
                android:text="@string/service_garage"
                android:textColor="@color/text_color_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/service_4s"
                android:src="@drawable/service_4s" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:gravity="center_horizontal"
                android:text="@string/service_4s"
                android:textColor="@color/text_color_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/service_recompany"
                android:src="@drawable/service_recompany" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:gravity="center_horizontal"
                android:text="@string/service_recompany"
                android:textColor="@color/text_color_black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>