<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/base_top_title" >
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/activity_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_register_bg"
                android:hint="用户名"
                android:maxLength="26"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/midtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_user_register_name" />

            <EditText
                android:id="@+id/activity_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_register_bg"
                android:hint="设置密码"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/midtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_user_register_password" />

            <EditText
                android:id="@+id/activity_user_again_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_register_bg"
                android:hint="确定密码"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/midtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_user_register_psw_again" />

            <EditText
                android:id="@+id/activity_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_register_bg"
                android:hint="手机号"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/midtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/activity_user_register_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/check_agreement"
                    style="@style/checkbox_Theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="卡车团"
                    android:textColor="@color/shape_text_black"
                    android:textSize="@dimen/midtext" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《个人会员协议》"
                    android:textColor="@color/shape_text_blue"
                    android:textSize="@dimen/midtext" />
            </LinearLayout>

            <Button
                android:onClick="register"
                android:id="@+id/activity_user_register_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_button_round"
                android:text="立即注册"
                android:textColor="@color/shape_text_white"
                android:textSize="@dimen/midtext" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>