<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFED"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_topbase"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FAFAFA" >

        <ImageView
            android:id="@+id/topbase_back"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/left_arrow" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <TextView
                android:id="@+id/topbase_center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/largetext" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ADADAD" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:padding="10dp" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_table_all_top_corner_no_bottom_line"
                    android:padding="5dp" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:contentDescription="@string/application_name"
                        android:src="@drawable/login_user" />

                    <EditText
                        android:id="@+id/activity_user_login_inptut_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:inputType="phone"
                        android:background="@drawable/shape_radius_input"
                        android:hint="@string/activity_user_login_inptut_username_hint"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/edt_hinit"
                        android:textSize="@dimen/midtext" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_table_all_bottom_corner_no_top_line"
                    android:padding="5dp" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_weight="1"
                        android:contentDescription="@string/application_name"
                        android:src="@drawable/login_password" />

                    <EditText
                        android:id="@+id/activity_user_login_inptut_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/shape_radius_input"
                        android:hint="@string/activity_user_login_inptut_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/edt_hinit"
                        android:textSize="@dimen/midtext" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/activity_user_login_inptut_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/shape_button_round"
                android:text="@string/activity_user_login_inptut_submit"
                android:textColor="@color/shape_text_white"
                android:textSize="@dimen/largetext" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/tv_doregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="立即注册"
                    android:textColor="@color/red_login"
                    android:textSize="@dimen/largetext" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="忘记密码"
                    android:textColor="@color/red_login"
                    android:textSize="@dimen/largetext" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>